// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`egapro 1`] = `
"📝 resources summary:
├── resources
│   ├── api
│   │   ├── Deployment
│   │   │   ├── kontinuous-wait-needs (init)
│   │   │   │   └── image: ghcr.io/socialgouv/kontinuous/wait-needs:v1.159.2
│   │   │   └── app
│   │   │       ├── image: harbor.fabrique.social.gouv.fr/egapro/egapro/api:preprod-b5faa561893cd5e18a5bc6fca3b3b10f5adc2ae8
│   │   │       └── port: 2626
│   │   ├── Service
│   │   │   └── port: http=80:2626
│   │   └── Ingress
│   │       └── hosts
│   │           └── https://egapro-preprod.dev.fabrique.social.gouv.fr
│   ├── app
│   │   ├── Deployment
│   │   │   ├── kontinuous-wait-needs (init)
│   │   │   │   └── image: ghcr.io/socialgouv/kontinuous/wait-needs:v1.159.2
│   │   │   └── app
│   │   │       ├── image: harbor.fabrique.social.gouv.fr/egapro/egapro/app:preprod-b5faa561893cd5e18a5bc6fca3b3b10f5adc2ae8
│   │   │       └── port: 3000
│   │   ├── Service
│   │   │   └── port: http=80:3000
│   │   └── Ingress
│   │       └── hosts
│   │           └── https://egapro-preprod.dev.fabrique.social.gouv.fr
│   ├── declaration
│   │   ├── Deployment
│   │   │   ├── kontinuous-wait-needs (init)
│   │   │   │   └── image: ghcr.io/socialgouv/kontinuous/wait-needs:v1.159.2
│   │   │   └── app
│   │   │       ├── image: harbor.fabrique.social.gouv.fr/egapro/egapro/declaration:preprod-b5faa561893cd5e18a5bc6fca3b3b10f5adc2ae8
│   │   │       └── port: 8080
│   │   ├── Service
│   │   │   └── port: http=80:8080
│   │   └── Ingress
│   │       └── hosts
│   │           └── https://egapro-preprod.dev.fabrique.social.gouv.fr
│   ├── files
│   │   ├── Deployment
│   │   │   └── app
│   │   │       ├── image: ghcr.io/socialgouv/docker/nginx:7.0.1
│   │   │       └── port: 8080
│   │   └── Service
│   │       └── port: http=80:8080
│   ├── maildev
│   │   ├── Deployment
│   │   │   └── maildev
│   │   │       ├── image: maildev/maildev:latest
│   │   │       └── ports: 1080,1025
│   │   ├── Service
│   │   │   └── ports: http=1080:1080,smtp=1025:1025
│   │   └── Ingress
│   │       └── hosts
│   │           └── https://maildev-egapro-preprod.dev.fabrique.social.gouv.fr
│   ├── simulateur
│   │   ├── Deployment
│   │   │   ├── kontinuous-wait-needs (init)
│   │   │   │   └── image: ghcr.io/socialgouv/kontinuous/wait-needs:v1.159.2
│   │   │   └── app
│   │   │       ├── image: harbor.fabrique.social.gouv.fr/egapro/egapro/simulateur:preprod-b5faa561893cd5e18a5bc6fca3b3b10f5adc2ae8
│   │   │       └── port: 8080
│   │   ├── Service
│   │   │   └── port: http=80:8080
│   │   └── Ingress
│   │       └── hosts
│   │           └── https://egapro-preprod.dev.fabrique.social.gouv.fr
│   └── storybook
│       ├── Deployment
│       │   ├── kontinuous-wait-needs (init)
│       │   │   └── image: ghcr.io/socialgouv/kontinuous/wait-needs:v1.159.2
│       │   └── app
│       │       ├── image: harbor.fabrique.social.gouv.fr/egapro/egapro/storybook:preprod-b5faa561893cd5e18a5bc6fca3b3b10f5adc2ae8
│       │       └── port: 8080
│       ├── Service
│       │   └── port: http=80:8080
│       └── Ingress
│           └── hosts
│               └── https://egapro-preprod.dev.fabrique.social.gouv.fr
└── globals
    ├── Namespace
    │   └── name: egapro-preprod
    ├── NetworkPolicy
    │   └── name: netpol-ingress
    ├── ServiceAccount
    │   └── name: default
    ├── PersistentVolumeClaim
    │   └── name: files
    ├── SealedSecret
    │   ├── name: basic-auth
    │   └── name: staff
    ├── Job
    │   ├── job-egapro-master-jobs-con-6v7vwk-build-api-buildkit-4zg3ke
    │   │   ├── degit-repository (init)
    │   │   │   ├── image: ghcr.io/socialgouv/kontinuous/degit:v1.159.2
    │   │   │   └── command: sh -c  degit SocialGouv/egapro#master \\   /workspa...
    │   │   └── job
    │   │       ├── image: moby/buildkit:v0.10.5-rootless
    │   │       └── command: /bin/sh -c set -e if [ "" != "" ]; then   export C...
    │   ├── job-egapro-master-jobs-con-6v7vwk-build-app-buildkit-1ngsea
    │   │   ├── degit-repository (init)
    │   │   │   ├── image: ghcr.io/socialgouv/kontinuous/degit:v1.159.2
    │   │   │   └── command: sh -c  degit SocialGouv/egapro#master \\   /workspa...
    │   │   └── job
    │   │       ├── image: moby/buildkit:v0.10.5-rootless
    │   │       └── command: /bin/sh -c set -e if [ "" != "" ]; then   export C...
    │   ├── job-egapro-master-jobs-con-6v7vwk-build-declaration-bui-3ykcwt
    │   │   ├── degit-repository (init)
    │   │   │   ├── image: ghcr.io/socialgouv/kontinuous/degit:v1.159.2
    │   │   │   └── command: sh -c  degit SocialGouv/egapro#master \\   /workspa...
    │   │   └── job
    │   │       ├── image: moby/buildkit:v0.10.5-rootless
    │   │       └── command: /bin/sh -c set -e if [ "" != "" ]; then   export C...
    │   ├── job-egapro-master-jobs-con-6v7vwk-build-simulateur-buil-3zbx3v
    │   │   ├── degit-repository (init)
    │   │   │   ├── image: ghcr.io/socialgouv/kontinuous/degit:v1.159.2
    │   │   │   └── command: sh -c  degit SocialGouv/egapro#master \\   /workspa...
    │   │   └── job
    │   │       ├── image: moby/buildkit:v0.10.5-rootless
    │   │       └── command: /bin/sh -c set -e if [ "" != "" ]; then   export C...
    │   └── job-egapro-master-jobs-con-6v7vwk-build-storybook-build-287ohe
    │       ├── degit-repository (init)
    │       │   ├── image: ghcr.io/socialgouv/kontinuous/degit:v1.159.2
    │       │   └── command: sh -c  degit SocialGouv/egapro#master \\   /workspa...
    │       └── job
    │           ├── image: moby/buildkit:v0.10.5-rootless
    │           └── command: /bin/sh -c set -e if [ "" != "" ]; then   export C...
    ├── CronJob
    │   ├── export-public-data
    │   │   ├── schedule: 0 0 * * *
    │   │   └── job
    │   │       ├── image: harbor.fabrique.social.gouv.fr/egapro/egapro/api:preprod-b5faa561893cd5e18a5bc6fca3b3b10f5adc2ae8
    │   │       └── command: sh -c set -e egapro export-public-data /mnt/files/...
    │   ├── dump-dgt
    │   │   ├── schedule: 0 0 * * *
    │   │   └── job
    │   │       ├── image: harbor.fabrique.social.gouv.fr/egapro/egapro/api:preprod-b5faa561893cd5e18a5bc6fca3b3b10f5adc2ae8
    │   │       └── command: sh -c set -e egapro dump-dgt /mnt/files/dgt.xlsx
    │   ├── dump-dgt-representation
    │   │   ├── schedule: 0 0 * * *
    │   │   └── job
    │   │       ├── image: harbor.fabrique.social.gouv.fr/egapro/egapro/api:preprod-b5faa561893cd5e18a5bc6fca3b3b10f5adc2ae8
    │   │       └── command: sh -c set -e egapro dump-dgt-representation /mnt/f...
    │   ├── full
    │   │   ├── schedule: 0 0 * * *
    │   │   └── job
    │   │       ├── image: harbor.fabrique.social.gouv.fr/egapro/egapro/api:preprod-b5faa561893cd5e18a5bc6fca3b3b10f5adc2ae8
    │   │       └── command: sh -c set -e egapro full /mnt/files/full.ndjson
    │   ├── export-indexes
    │   │   ├── schedule: 0 0 * * *
    │   │   └── job
    │   │       ├── image: harbor.fabrique.social.gouv.fr/egapro/egapro/api:preprod-b5faa561893cd5e18a5bc6fca3b3b10f5adc2ae8
    │   │       └── command: sh -c set -e egapro export-indexes /mnt/files/inde...
    │   └── export-representation
    │       ├── schedule: 0 0 * * *
    │       └── job
    │           ├── image: harbor.fabrique.social.gouv.fr/egapro/egapro/api:preprod-b5faa561893cd5e18a5bc6fca3b3b10f5adc2ae8
    │           └── command: sh -c set -e egapro export-representation /mnt/fil...
    └── Ingress
        ├── hosts
        │   └── https://egapro-preprod.dev.fabrique.social.gouv.fr
        └── hosts
            └── https://egapro-preprod.dev.fabrique.social.gouv.fr

"
`;

exports[`template 1`] = `
"📝 resources summary:
├── resources
│   ├── api
│   │   ├── Deployment
│   │   │   ├── kontinuous-wait-needs (init)
│   │   │   │   └── image: ghcr.io/socialgouv/kontinuous/wait-needs:v1.159.2
│   │   │   └── app
│   │   │       ├── image: harbor.fabrique.social.gouv.fr/egapro/egapro/api:preprod-b5faa561893cd5e18a5bc6fca3b3b10f5adc2ae8
│   │   │       └── port: 2626
│   │   ├── Service
│   │   │   └── port: http=80:2626
│   │   └── Ingress
│   │       └── hosts
│   │           └── https://egapro-preprod.dev.fabrique.social.gouv.fr
│   ├── app
│   │   ├── Deployment
│   │   │   ├── kontinuous-wait-needs (init)
│   │   │   │   └── image: ghcr.io/socialgouv/kontinuous/wait-needs:v1.159.2
│   │   │   └── app
│   │   │       ├── image: harbor.fabrique.social.gouv.fr/egapro/egapro/app:preprod-b5faa561893cd5e18a5bc6fca3b3b10f5adc2ae8
│   │   │       └── port: 3000
│   │   ├── Service
│   │   │   └── port: http=80:3000
│   │   └── Ingress
│   │       └── hosts
│   │           └── https://egapro-preprod.dev.fabrique.social.gouv.fr
│   ├── declaration
│   │   ├── Deployment
│   │   │   ├── kontinuous-wait-needs (init)
│   │   │   │   └── image: ghcr.io/socialgouv/kontinuous/wait-needs:v1.159.2
│   │   │   └── app
│   │   │       ├── image: harbor.fabrique.social.gouv.fr/egapro/egapro/declaration:preprod-b5faa561893cd5e18a5bc6fca3b3b10f5adc2ae8
│   │   │       └── port: 8080
│   │   ├── Service
│   │   │   └── port: http=80:8080
│   │   └── Ingress
│   │       └── hosts
│   │           └── https://egapro-preprod.dev.fabrique.social.gouv.fr
│   ├── files
│   │   ├── Deployment
│   │   │   └── app
│   │   │       ├── image: ghcr.io/socialgouv/docker/nginx:7.0.1
│   │   │       └── port: 8080
│   │   └── Service
│   │       └── port: http=80:8080
│   ├── maildev
│   │   ├── Deployment
│   │   │   └── maildev
│   │   │       ├── image: maildev/maildev:latest
│   │   │       └── ports: 1080,1025
│   │   ├── Service
│   │   │   └── ports: http=1080:1080,smtp=1025:1025
│   │   └── Ingress
│   │       └── hosts
│   │           └── https://maildev-egapro-preprod.dev.fabrique.social.gouv.fr
│   ├── simulateur
│   │   ├── Deployment
│   │   │   ├── kontinuous-wait-needs (init)
│   │   │   │   └── image: ghcr.io/socialgouv/kontinuous/wait-needs:v1.159.2
│   │   │   └── app
│   │   │       ├── image: harbor.fabrique.social.gouv.fr/egapro/egapro/simulateur:preprod-b5faa561893cd5e18a5bc6fca3b3b10f5adc2ae8
│   │   │       └── port: 8080
│   │   ├── Service
│   │   │   └── port: http=80:8080
│   │   └── Ingress
│   │       └── hosts
│   │           └── https://egapro-preprod.dev.fabrique.social.gouv.fr
│   └── storybook
│       ├── Deployment
│       │   ├── kontinuous-wait-needs (init)
│       │   │   └── image: ghcr.io/socialgouv/kontinuous/wait-needs:v1.159.2
│       │   └── app
│       │       ├── image: harbor.fabrique.social.gouv.fr/egapro/egapro/storybook:preprod-b5faa561893cd5e18a5bc6fca3b3b10f5adc2ae8
│       │       └── port: 8080
│       ├── Service
│       │   └── port: http=80:8080
│       └── Ingress
│           └── hosts
│               └── https://egapro-preprod.dev.fabrique.social.gouv.fr
└── globals
    ├── Namespace
    │   └── name: egapro-preprod
    ├── NetworkPolicy
    │   └── name: netpol-ingress
    ├── ServiceAccount
    │   └── name: default
    ├── PersistentVolumeClaim
    │   └── name: files
    ├── SealedSecret
    │   ├── name: basic-auth
    │   └── name: staff
    ├── Job
    │   ├── job-egapro-master-jobs-con-6v7vwk-build-api-buildkit-4zg3ke
    │   │   ├── degit-repository (init)
    │   │   │   ├── image: ghcr.io/socialgouv/kontinuous/degit:v1.159.2
    │   │   │   └── command: sh -c  degit SocialGouv/egapro#master \\   /workspa...
    │   │   └── job
    │   │       ├── image: moby/buildkit:v0.10.5-rootless
    │   │       └── command: /bin/sh -c set -e if [ "" != "" ]; then   export C...
    │   ├── job-egapro-master-jobs-con-6v7vwk-build-app-buildkit-1ngsea
    │   │   ├── degit-repository (init)
    │   │   │   ├── image: ghcr.io/socialgouv/kontinuous/degit:v1.159.2
    │   │   │   └── command: sh -c  degit SocialGouv/egapro#master \\   /workspa...
    │   │   └── job
    │   │       ├── image: moby/buildkit:v0.10.5-rootless
    │   │       └── command: /bin/sh -c set -e if [ "" != "" ]; then   export C...
    │   ├── job-egapro-master-jobs-con-6v7vwk-build-declaration-bui-3ykcwt
    │   │   ├── degit-repository (init)
    │   │   │   ├── image: ghcr.io/socialgouv/kontinuous/degit:v1.159.2
    │   │   │   └── command: sh -c  degit SocialGouv/egapro#master \\   /workspa...
    │   │   └── job
    │   │       ├── image: moby/buildkit:v0.10.5-rootless
    │   │       └── command: /bin/sh -c set -e if [ "" != "" ]; then   export C...
    │   ├── job-egapro-master-jobs-con-6v7vwk-build-simulateur-buil-3zbx3v
    │   │   ├── degit-repository (init)
    │   │   │   ├── image: ghcr.io/socialgouv/kontinuous/degit:v1.159.2
    │   │   │   └── command: sh -c  degit SocialGouv/egapro#master \\   /workspa...
    │   │   └── job
    │   │       ├── image: moby/buildkit:v0.10.5-rootless
    │   │       └── command: /bin/sh -c set -e if [ "" != "" ]; then   export C...
    │   └── job-egapro-master-jobs-con-6v7vwk-build-storybook-build-287ohe
    │       ├── degit-repository (init)
    │       │   ├── image: ghcr.io/socialgouv/kontinuous/degit:v1.159.2
    │       │   └── command: sh -c  degit SocialGouv/egapro#master \\   /workspa...
    │       └── job
    │           ├── image: moby/buildkit:v0.10.5-rootless
    │           └── command: /bin/sh -c set -e if [ "" != "" ]; then   export C...
    ├── CronJob
    │   ├── export-public-data
    │   │   ├── schedule: 0 0 * * *
    │   │   └── job
    │   │       ├── image: harbor.fabrique.social.gouv.fr/egapro/egapro/api:preprod-b5faa561893cd5e18a5bc6fca3b3b10f5adc2ae8
    │   │       └── command: sh -c set -e egapro export-public-data /mnt/files/...
    │   ├── dump-dgt
    │   │   ├── schedule: 0 0 * * *
    │   │   └── job
    │   │       ├── image: harbor.fabrique.social.gouv.fr/egapro/egapro/api:preprod-b5faa561893cd5e18a5bc6fca3b3b10f5adc2ae8
    │   │       └── command: sh -c set -e egapro dump-dgt /mnt/files/dgt.xlsx
    │   ├── dump-dgt-representation
    │   │   ├── schedule: 0 0 * * *
    │   │   └── job
    │   │       ├── image: harbor.fabrique.social.gouv.fr/egapro/egapro/api:preprod-b5faa561893cd5e18a5bc6fca3b3b10f5adc2ae8
    │   │       └── command: sh -c set -e egapro dump-dgt-representation /mnt/f...
    │   ├── full
    │   │   ├── schedule: 0 0 * * *
    │   │   └── job
    │   │       ├── image: harbor.fabrique.social.gouv.fr/egapro/egapro/api:preprod-b5faa561893cd5e18a5bc6fca3b3b10f5adc2ae8
    │   │       └── command: sh -c set -e egapro full /mnt/files/full.ndjson
    │   ├── export-indexes
    │   │   ├── schedule: 0 0 * * *
    │   │   └── job
    │   │       ├── image: harbor.fabrique.social.gouv.fr/egapro/egapro/api:preprod-b5faa561893cd5e18a5bc6fca3b3b10f5adc2ae8
    │   │       └── command: sh -c set -e egapro export-indexes /mnt/files/inde...
    │   └── export-representation
    │       ├── schedule: 0 0 * * *
    │       └── job
    │           ├── image: harbor.fabrique.social.gouv.fr/egapro/egapro/api:preprod-b5faa561893cd5e18a5bc6fca3b3b10f5adc2ae8
    │           └── command: sh -c set -e egapro export-representation /mnt/fil...
    └── Ingress
        ├── hosts
        │   └── https://egapro-preprod.dev.fabrique.social.gouv.fr
        └── hosts
            └── https://egapro-preprod.dev.fabrique.social.gouv.fr

📝 resources summary:
├── resources
│   ├── app
│   │   ├── Deployment
│   │   │   └── app
│   │   │       ├── image: ghcr.io/socialgouv/template/app:sha-2c7b0f670155424e5be5cf5a3f8f3012688f5f18
│   │   │       └── port: 3000
│   │   ├── Service
│   │   │   └── port: http=80:3000
│   │   └── Ingress
│   │       └── hosts
│   │           └── https://template-k-mvp-mig-9.dev.fabrique.social.gouv.fr
│   └── hasura
│       ├── Deployment
│       │   └── hasura
│       │       ├── image: ghcr.io/socialgouv/template/hasura:sha-2c7b0f670155424e5be5cf5a3f8f3012688f5f18
│       │       └── port: 8080
│       ├── Service
│       │   └── port: http=80:8080
│       └── Ingress
│           └── hosts
│               └── https://hasura-template-k-mvp-mig-9.dev.fabrique.social.gouv.fr
└── globals
    ├── Namespace
    │   └── name: template-k-mvp-mig-9
    ├── NetworkPolicy
    │   └── name: netpol-ingress
    ├── ServiceAccount
    │   └── name: default
    ├── ConfigMap
    │   ├── name: app
    │   └── name: keycloak-realm
    ├── SealedSecret
    │   ├── name: app
    │   ├── name: franceconnect
    │   ├── name: hasura
    │   ├── name: keycloak-secrets
    │   └── name: smtp
    ├── Job
    │   ├── job-template-k-mvp-mig-9-jobs-con-6v7vwk-db-hasura-crea-3rcr3k
    │   │   ├── kontinuous-wait-needs (init)
    │   │   │   └── image: ghcr.io/socialgouv/kontinuous/wait-needs:v1.159.2
    │   │   ├── degit-action (init)
    │   │   │   ├── image: ghcr.io/socialgouv/kontinuous/degit:v1.159.2
    │   │   │   └── command: sh -c degit SocialGouv/kontinuous/plugins/contrib/...
    │   │   └── job
    │   │       ├── image: ghcr.io/socialgouv/docker/psql:6.70.0
    │   │       └── command: /bin/bash -c set -e /action/ensure-db.sh
    │   ├── job-template-k-mvp-mig-9-jobs-con-6v7vwk-db-hasura-crea-5axfnj
    │   │   ├── degit-action (init)
    │   │   │   ├── image: ghcr.io/socialgouv/kontinuous/degit:v1.159.2
    │   │   │   └── command: sh -c degit SocialGouv/kontinuous/plugins/contrib/...
    │   │   └── job
    │   │       ├── image: bitnami/kubectl:latest
    │   │       └── command: /bin/bash -c set -e /action/create-secret.sh
    │   ├── job-template-k-mvp-mig-9-jobs-con-6v7vwk-db-keycloak-cr-5fc7zt
    │   │   ├── kontinuous-wait-needs (init)
    │   │   │   └── image: ghcr.io/socialgouv/kontinuous/wait-needs:v1.159.2
    │   │   ├── degit-action (init)
    │   │   │   ├── image: ghcr.io/socialgouv/kontinuous/degit:v1.159.2
    │   │   │   └── command: sh -c degit SocialGouv/kontinuous/plugins/contrib/...
    │   │   └── job
    │   │       ├── image: ghcr.io/socialgouv/docker/psql:6.70.0
    │   │       └── command: /bin/bash -c set -e /action/ensure-db.sh
    │   ├── job-template-k-mvp-mig-9-jobs-con-6v7vwk-db-keycloak-cr-4j23v3
    │   │   ├── degit-action (init)
    │   │   │   ├── image: ghcr.io/socialgouv/kontinuous/degit:v1.159.2
    │   │   │   └── command: sh -c degit SocialGouv/kontinuous/plugins/contrib/...
    │   │   └── job
    │   │       ├── image: bitnami/kubectl:latest
    │   │       └── command: /bin/bash -c set -e /action/create-secret.sh
    │   ├── job-template-k-mvp-mig-9-jobs-con-6v7vwk-seed-hasura-im-pfycj9
    │   │   ├── kontinuous-wait-needs (init)
    │   │   │   └── image: ghcr.io/socialgouv/kontinuous/wait-needs:v1.159.2
    │   │   ├── degit-action (init)
    │   │   │   ├── image: ghcr.io/socialgouv/kontinuous/degit:v1.159.2
    │   │   │   └── command: sh -c degit SocialGouv/kontinuous/plugins/contrib/...
    │   │   └── job
    │   │       ├── image: bitnami/kubectl:latest
    │   │       └── command: /bin/bash -c set -e /action/import-secret.sh
    │   └── job-template-k-mvp-mig-9-jobs-con-6v7vwk-seed-hasura-se-5un89q
    │       ├── kontinuous-wait-needs (init)
    │       │   └── image: ghcr.io/socialgouv/kontinuous/wait-needs:v1.159.2
    │       ├── degit-repository (init)
    │       │   ├── image: ghcr.io/socialgouv/kontinuous/degit:v1.159.2
    │       │   └── command: sh -c  degit SocialGouv/template#k-mvp-mig-9 \\   /...
    │       ├── degit-action (init)
    │       │   ├── image: ghcr.io/socialgouv/kontinuous/degit:v1.159.2
    │       │   └── command: sh -c degit SocialGouv/kontinuous/plugins/contrib/...
    │       └── job
    │           ├── image: ghcr.io/socialgouv/docker/psql:7.0.0
    │           └── command: /bin/bash -c set -e /action/seed-db.sh
    ├── Service
    │   ├── port: http=8080:http
    │   └── ports: http=8080:http,https=8443:https
    ├── StatefulSet
    │   └── name: keycloakx
    └── Ingress
        └── hosts
            └── https://keycloak-template-k-mvp-mig-9.dev.fabrique.social.gouv.fr

"
`;

exports[`www 1`] = `
"📝 resources summary:
├── resources
│   ├── api
│   │   ├── Deployment
│   │   │   ├── kontinuous-wait-needs (init)
│   │   │   │   └── image: ghcr.io/socialgouv/kontinuous/wait-needs:v1.159.2
│   │   │   └── app
│   │   │       ├── image: harbor.fabrique.social.gouv.fr/egapro/egapro/api:preprod-b5faa561893cd5e18a5bc6fca3b3b10f5adc2ae8
│   │   │       └── port: 2626
│   │   ├── Service
│   │   │   └── port: http=80:2626
│   │   └── Ingress
│   │       └── hosts
│   │           └── https://egapro-preprod.dev.fabrique.social.gouv.fr
│   ├── app
│   │   ├── Deployment
│   │   │   ├── kontinuous-wait-needs (init)
│   │   │   │   └── image: ghcr.io/socialgouv/kontinuous/wait-needs:v1.159.2
│   │   │   └── app
│   │   │       ├── image: harbor.fabrique.social.gouv.fr/egapro/egapro/app:preprod-b5faa561893cd5e18a5bc6fca3b3b10f5adc2ae8
│   │   │       └── port: 3000
│   │   ├── Service
│   │   │   └── port: http=80:3000
│   │   └── Ingress
│   │       └── hosts
│   │           └── https://egapro-preprod.dev.fabrique.social.gouv.fr
│   ├── declaration
│   │   ├── Deployment
│   │   │   ├── kontinuous-wait-needs (init)
│   │   │   │   └── image: ghcr.io/socialgouv/kontinuous/wait-needs:v1.159.2
│   │   │   └── app
│   │   │       ├── image: harbor.fabrique.social.gouv.fr/egapro/egapro/declaration:preprod-b5faa561893cd5e18a5bc6fca3b3b10f5adc2ae8
│   │   │       └── port: 8080
│   │   ├── Service
│   │   │   └── port: http=80:8080
│   │   └── Ingress
│   │       └── hosts
│   │           └── https://egapro-preprod.dev.fabrique.social.gouv.fr
│   ├── files
│   │   ├── Deployment
│   │   │   └── app
│   │   │       ├── image: ghcr.io/socialgouv/docker/nginx:7.0.1
│   │   │       └── port: 8080
│   │   └── Service
│   │       └── port: http=80:8080
│   ├── maildev
│   │   ├── Deployment
│   │   │   └── maildev
│   │   │       ├── image: maildev/maildev:latest
│   │   │       └── ports: 1080,1025
│   │   ├── Service
│   │   │   └── ports: http=1080:1080,smtp=1025:1025
│   │   └── Ingress
│   │       └── hosts
│   │           └── https://maildev-egapro-preprod.dev.fabrique.social.gouv.fr
│   ├── simulateur
│   │   ├── Deployment
│   │   │   ├── kontinuous-wait-needs (init)
│   │   │   │   └── image: ghcr.io/socialgouv/kontinuous/wait-needs:v1.159.2
│   │   │   └── app
│   │   │       ├── image: harbor.fabrique.social.gouv.fr/egapro/egapro/simulateur:preprod-b5faa561893cd5e18a5bc6fca3b3b10f5adc2ae8
│   │   │       └── port: 8080
│   │   ├── Service
│   │   │   └── port: http=80:8080
│   │   └── Ingress
│   │       └── hosts
│   │           └── https://egapro-preprod.dev.fabrique.social.gouv.fr
│   └── storybook
│       ├── Deployment
│       │   ├── kontinuous-wait-needs (init)
│       │   │   └── image: ghcr.io/socialgouv/kontinuous/wait-needs:v1.159.2
│       │   └── app
│       │       ├── image: harbor.fabrique.social.gouv.fr/egapro/egapro/storybook:preprod-b5faa561893cd5e18a5bc6fca3b3b10f5adc2ae8
│       │       └── port: 8080
│       ├── Service
│       │   └── port: http=80:8080
│       └── Ingress
│           └── hosts
│               └── https://egapro-preprod.dev.fabrique.social.gouv.fr
└── globals
    ├── Namespace
    │   └── name: egapro-preprod
    ├── NetworkPolicy
    │   └── name: netpol-ingress
    ├── ServiceAccount
    │   └── name: default
    ├── PersistentVolumeClaim
    │   └── name: files
    ├── SealedSecret
    │   ├── name: basic-auth
    │   └── name: staff
    ├── Job
    │   ├── job-egapro-master-jobs-con-6v7vwk-build-api-buildkit-4zg3ke
    │   │   ├── degit-repository (init)
    │   │   │   ├── image: ghcr.io/socialgouv/kontinuous/degit:v1.159.2
    │   │   │   └── command: sh -c  degit SocialGouv/egapro#master \\   /workspa...
    │   │   └── job
    │   │       ├── image: moby/buildkit:v0.10.5-rootless
    │   │       └── command: /bin/sh -c set -e if [ "" != "" ]; then   export C...
    │   ├── job-egapro-master-jobs-con-6v7vwk-build-app-buildkit-1ngsea
    │   │   ├── degit-repository (init)
    │   │   │   ├── image: ghcr.io/socialgouv/kontinuous/degit:v1.159.2
    │   │   │   └── command: sh -c  degit SocialGouv/egapro#master \\   /workspa...
    │   │   └── job
    │   │       ├── image: moby/buildkit:v0.10.5-rootless
    │   │       └── command: /bin/sh -c set -e if [ "" != "" ]; then   export C...
    │   ├── job-egapro-master-jobs-con-6v7vwk-build-declaration-bui-3ykcwt
    │   │   ├── degit-repository (init)
    │   │   │   ├── image: ghcr.io/socialgouv/kontinuous/degit:v1.159.2
    │   │   │   └── command: sh -c  degit SocialGouv/egapro#master \\   /workspa...
    │   │   └── job
    │   │       ├── image: moby/buildkit:v0.10.5-rootless
    │   │       └── command: /bin/sh -c set -e if [ "" != "" ]; then   export C...
    │   ├── job-egapro-master-jobs-con-6v7vwk-build-simulateur-buil-3zbx3v
    │   │   ├── degit-repository (init)
    │   │   │   ├── image: ghcr.io/socialgouv/kontinuous/degit:v1.159.2
    │   │   │   └── command: sh -c  degit SocialGouv/egapro#master \\   /workspa...
    │   │   └── job
    │   │       ├── image: moby/buildkit:v0.10.5-rootless
    │   │       └── command: /bin/sh -c set -e if [ "" != "" ]; then   export C...
    │   └── job-egapro-master-jobs-con-6v7vwk-build-storybook-build-287ohe
    │       ├── degit-repository (init)
    │       │   ├── image: ghcr.io/socialgouv/kontinuous/degit:v1.159.2
    │       │   └── command: sh -c  degit SocialGouv/egapro#master \\   /workspa...
    │       └── job
    │           ├── image: moby/buildkit:v0.10.5-rootless
    │           └── command: /bin/sh -c set -e if [ "" != "" ]; then   export C...
    ├── CronJob
    │   ├── export-public-data
    │   │   ├── schedule: 0 0 * * *
    │   │   └── job
    │   │       ├── image: harbor.fabrique.social.gouv.fr/egapro/egapro/api:preprod-b5faa561893cd5e18a5bc6fca3b3b10f5adc2ae8
    │   │       └── command: sh -c set -e egapro export-public-data /mnt/files/...
    │   ├── dump-dgt
    │   │   ├── schedule: 0 0 * * *
    │   │   └── job
    │   │       ├── image: harbor.fabrique.social.gouv.fr/egapro/egapro/api:preprod-b5faa561893cd5e18a5bc6fca3b3b10f5adc2ae8
    │   │       └── command: sh -c set -e egapro dump-dgt /mnt/files/dgt.xlsx
    │   ├── dump-dgt-representation
    │   │   ├── schedule: 0 0 * * *
    │   │   └── job
    │   │       ├── image: harbor.fabrique.social.gouv.fr/egapro/egapro/api:preprod-b5faa561893cd5e18a5bc6fca3b3b10f5adc2ae8
    │   │       └── command: sh -c set -e egapro dump-dgt-representation /mnt/f...
    │   ├── full
    │   │   ├── schedule: 0 0 * * *
    │   │   └── job
    │   │       ├── image: harbor.fabrique.social.gouv.fr/egapro/egapro/api:preprod-b5faa561893cd5e18a5bc6fca3b3b10f5adc2ae8
    │   │       └── command: sh -c set -e egapro full /mnt/files/full.ndjson
    │   ├── export-indexes
    │   │   ├── schedule: 0 0 * * *
    │   │   └── job
    │   │       ├── image: harbor.fabrique.social.gouv.fr/egapro/egapro/api:preprod-b5faa561893cd5e18a5bc6fca3b3b10f5adc2ae8
    │   │       └── command: sh -c set -e egapro export-indexes /mnt/files/inde...
    │   └── export-representation
    │       ├── schedule: 0 0 * * *
    │       └── job
    │           ├── image: harbor.fabrique.social.gouv.fr/egapro/egapro/api:preprod-b5faa561893cd5e18a5bc6fca3b3b10f5adc2ae8
    │           └── command: sh -c set -e egapro export-representation /mnt/fil...
    └── Ingress
        ├── hosts
        │   └── https://egapro-preprod.dev.fabrique.social.gouv.fr
        └── hosts
            └── https://egapro-preprod.dev.fabrique.social.gouv.fr

📝 resources summary:
├── resources
│   ├── app
│   │   ├── Deployment
│   │   │   └── app
│   │   │       ├── image: ghcr.io/socialgouv/template/app:sha-2c7b0f670155424e5be5cf5a3f8f3012688f5f18
│   │   │       └── port: 3000
│   │   ├── Service
│   │   │   └── port: http=80:3000
│   │   └── Ingress
│   │       └── hosts
│   │           └── https://template-k-mvp-mig-9.dev.fabrique.social.gouv.fr
│   └── hasura
│       ├── Deployment
│       │   └── hasura
│       │       ├── image: ghcr.io/socialgouv/template/hasura:sha-2c7b0f670155424e5be5cf5a3f8f3012688f5f18
│       │       └── port: 8080
│       ├── Service
│       │   └── port: http=80:8080
│       └── Ingress
│           └── hosts
│               └── https://hasura-template-k-mvp-mig-9.dev.fabrique.social.gouv.fr
└── globals
    ├── Namespace
    │   └── name: template-k-mvp-mig-9
    ├── NetworkPolicy
    │   └── name: netpol-ingress
    ├── ServiceAccount
    │   └── name: default
    ├── ConfigMap
    │   ├── name: app
    │   └── name: keycloak-realm
    ├── SealedSecret
    │   ├── name: app
    │   ├── name: franceconnect
    │   ├── name: hasura
    │   ├── name: keycloak-secrets
    │   └── name: smtp
    ├── Job
    │   ├── job-template-k-mvp-mig-9-jobs-con-6v7vwk-db-hasura-crea-3rcr3k
    │   │   ├── kontinuous-wait-needs (init)
    │   │   │   └── image: ghcr.io/socialgouv/kontinuous/wait-needs:v1.159.2
    │   │   ├── degit-action (init)
    │   │   │   ├── image: ghcr.io/socialgouv/kontinuous/degit:v1.159.2
    │   │   │   └── command: sh -c degit SocialGouv/kontinuous/plugins/contrib/...
    │   │   └── job
    │   │       ├── image: ghcr.io/socialgouv/docker/psql:6.70.0
    │   │       └── command: /bin/bash -c set -e /action/ensure-db.sh
    │   ├── job-template-k-mvp-mig-9-jobs-con-6v7vwk-db-hasura-crea-5axfnj
    │   │   ├── degit-action (init)
    │   │   │   ├── image: ghcr.io/socialgouv/kontinuous/degit:v1.159.2
    │   │   │   └── command: sh -c degit SocialGouv/kontinuous/plugins/contrib/...
    │   │   └── job
    │   │       ├── image: bitnami/kubectl:latest
    │   │       └── command: /bin/bash -c set -e /action/create-secret.sh
    │   ├── job-template-k-mvp-mig-9-jobs-con-6v7vwk-db-keycloak-cr-5fc7zt
    │   │   ├── kontinuous-wait-needs (init)
    │   │   │   └── image: ghcr.io/socialgouv/kontinuous/wait-needs:v1.159.2
    │   │   ├── degit-action (init)
    │   │   │   ├── image: ghcr.io/socialgouv/kontinuous/degit:v1.159.2
    │   │   │   └── command: sh -c degit SocialGouv/kontinuous/plugins/contrib/...
    │   │   └── job
    │   │       ├── image: ghcr.io/socialgouv/docker/psql:6.70.0
    │   │       └── command: /bin/bash -c set -e /action/ensure-db.sh
    │   ├── job-template-k-mvp-mig-9-jobs-con-6v7vwk-db-keycloak-cr-4j23v3
    │   │   ├── degit-action (init)
    │   │   │   ├── image: ghcr.io/socialgouv/kontinuous/degit:v1.159.2
    │   │   │   └── command: sh -c degit SocialGouv/kontinuous/plugins/contrib/...
    │   │   └── job
    │   │       ├── image: bitnami/kubectl:latest
    │   │       └── command: /bin/bash -c set -e /action/create-secret.sh
    │   ├── job-template-k-mvp-mig-9-jobs-con-6v7vwk-seed-hasura-im-pfycj9
    │   │   ├── kontinuous-wait-needs (init)
    │   │   │   └── image: ghcr.io/socialgouv/kontinuous/wait-needs:v1.159.2
    │   │   ├── degit-action (init)
    │   │   │   ├── image: ghcr.io/socialgouv/kontinuous/degit:v1.159.2
    │   │   │   └── command: sh -c degit SocialGouv/kontinuous/plugins/contrib/...
    │   │   └── job
    │   │       ├── image: bitnami/kubectl:latest
    │   │       └── command: /bin/bash -c set -e /action/import-secret.sh
    │   └── job-template-k-mvp-mig-9-jobs-con-6v7vwk-seed-hasura-se-5un89q
    │       ├── kontinuous-wait-needs (init)
    │       │   └── image: ghcr.io/socialgouv/kontinuous/wait-needs:v1.159.2
    │       ├── degit-repository (init)
    │       │   ├── image: ghcr.io/socialgouv/kontinuous/degit:v1.159.2
    │       │   └── command: sh -c  degit SocialGouv/template#k-mvp-mig-9 \\   /...
    │       ├── degit-action (init)
    │       │   ├── image: ghcr.io/socialgouv/kontinuous/degit:v1.159.2
    │       │   └── command: sh -c degit SocialGouv/kontinuous/plugins/contrib/...
    │       └── job
    │           ├── image: ghcr.io/socialgouv/docker/psql:7.0.0
    │           └── command: /bin/bash -c set -e /action/seed-db.sh
    ├── Service
    │   ├── port: http=8080:http
    │   └── ports: http=8080:http,https=8443:https
    ├── StatefulSet
    │   └── name: keycloakx
    └── Ingress
        └── hosts
            └── https://keycloak-template-k-mvp-mig-9.dev.fabrique.social.gouv.fr

📝 resources summary:
├── resources
│   └── app
│       ├── Deployment
│       │   ├── kontinuous-wait-needs (init)
│       │   │   └── image: ghcr.io/socialgouv/kontinuous/wait-needs:v1.159.2
│       │   └── app
│       │       ├── image: ghcr.io/socialgouv/www/app:sha-1ca3107affe6e436280896ab63b912d536790cfe
│       │       └── port: 8080
│       ├── Service
│       │   └── port: http=80:8080
│       └── Ingress
│           └── hosts
│               └── https://www-kontinuous-ac.dev.fabrique.social.gouv.fr
└── globals
    ├── Namespace
    │   └── name: www-kontinuous-ac
    ├── NetworkPolicy
    │   └── name: netpol-ingress
    ├── ServiceAccount
    │   └── name: default
    └── Job
        └── job-www-kontinuous-ac-jobs-con-6v7vwk-build-app-buildkit-1ngsea
            ├── degit-repository (init)
            │   ├── image: ghcr.io/socialgouv/kontinuous/degit:v1.159.2
            │   └── command: sh -c  degit SocialGouv/www#kontinuous-ac \\   /wor...
            └── job
                ├── image: moby/buildkit:v0.10.5-rootless
                └── command: /bin/sh -c set -e if [ "" != "" ]; then   export C...

"
`;
